<package format="2">
  <name>map_store</name>
  <version>0.4.0</version>
  <description>
    Storage manager for OccupancyGrid maps. Supports naming the most
    recent map, getting a list of map names, and publishing a
    specific map.
  </description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/map_store</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>libmongoclient-dev</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>warehouse_ros_mongo</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>warehouse_ros</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>